--- a/src/GenerativeAI.Generators/GenerativeAI.Generators.csproj
+++ b/src/GenerativeAI.Generators/GenerativeAI.Generators.csproj
@@ -8,6 +8,9 @@
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	  <LangVersion>10</LangVersion>
     <NoWarn>$(NoWarn);CA1014;CA1031;CA1308</NoWarn>
+    <PackageProjectUrl>https://github.com/gunpal5/Google_GenerativeAI</PackageProjectUrl>
+    <Description>Code Generator For Generative AI</Description>
+    <Title>Code Generator for Google GenerativeAI</Title>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +20,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" PrivateAssets="all" />
     <PackageReference Include="H.Generators.Extensions" Version="1.20.0" PrivateAssets="all" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
