--- a/src/GenerativeAI/GenerativeAI.csproj
+++ b/src/GenerativeAI/GenerativeAI.csproj
@@ -18,6 +18,7 @@
 	  <Version>0.1.0</Version>
 	  <AssemblyVersion>0.1.0</AssemblyVersion>
 	  <FileVersion>0.1.0</FileVersion>
+	  <SignAssembly>True</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
