--- a/tests/GenerativeAI.IntegrationTests/GenerativeAI.IntegrationTests.csproj
+++ b/tests/GenerativeAI.IntegrationTests/GenerativeAI.IntegrationTests.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\GenerativeAI.Generators\GenerativeAI.Generators.csproj" OutputItemType="Analyzer" />
-    <ProjectReference Include="..\..\src\GenerativeAI\GenerativeAI.csproj" OutputItemType="Analyzer"/>
+    <ProjectReference Include="..\..\src\GenerativeAI\GenerativeAI.csproj" />
   </ItemGroup>
 
 </Project>
