--- a/src/GenerativeAI.Generators/GenerativeAI.Generators.csproj
+++ b/src/GenerativeAI.Generators/GenerativeAI.Generators.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -11,6 +11,7 @@
     <PackageProjectUrl>https://github.com/gunpal5/Google_GenerativeAI</PackageProjectUrl>
     <Description>Code Generator For Generative AI</Description>
     <Title>Code Generator for Google GenerativeAI</Title>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,7 +20,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" PrivateAssets="all" />
-    <PackageReference Include="H.Generators.Extensions" Version="1.20.0" PrivateAssets="all" />
+    <PackageReference Include="H.Generators.Extensions" Version="1.22.0" PrivateAssets="all" PackAsAnalyzer="true">
+		
+	    
+    </PackageReference>
   </ItemGroup>
 
 </Project>
