--- a/src/GenerativeAI/GenerativeAI.csproj
+++ b/src/GenerativeAI/GenerativeAI.csproj
@@ -14,10 +14,11 @@
 	  <PackageReadmeFile>README.md</PackageReadmeFile>
 	  <RepositoryUrl>https://github.com/gunpal5/Google_GenerativeAI</RepositoryUrl>
 	  <PackageTags>Gemini,Google,GenerativeAI</PackageTags>
-	  <Version>0.1.12</Version>
-	  <AssemblyVersion>0.1.12</AssemblyVersion>
-	  <FileVersion>0.1.12</FileVersion>
+	  <Version>0.1.13</Version>
+	  <AssemblyVersion>0.1.13</AssemblyVersion>
+	  <FileVersion>0.1.13</FileVersion>
 	  <SignAssembly>True</SignAssembly>
+	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 	
   <ItemGroup>
