--- a/tests/GenerativeAI.Tests/GenerativeAI.Tests.csproj
+++ b/tests/GenerativeAI.Tests/GenerativeAI.Tests.csproj
@@ -38,6 +38,15 @@
     <None Update="image2.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\testvideo.mp4">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\testaudio.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
