--- a/tests/GenerativeAI.IntegrationTests/GenerativeAI.IntegrationTests.csproj
+++ b/tests/GenerativeAI.IntegrationTests/GenerativeAI.IntegrationTests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <ProjectReference Include="..\..\src\GenerativeAI.Tools\GenerativeAI.Tools.csproj" />
 	  <ProjectReference Include="..\..\src\GenerativeAI\GenerativeAI.csproj" />
   </ItemGroup>
 
