--- a/src/GenerativeAI/GenerativeAI.csproj
+++ b/src/GenerativeAI/GenerativeAI.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="AiModels\ImageGenerator\" />
     <Folder Include="Types\Converters\" />
     <Folder Include="Types\Tuning\Permissions\" />
   </ItemGroup>
