--- a/src/GenerativeAI.Microsoft/GenerativeAI.Microsoft.csproj
+++ b/src/GenerativeAI.Microsoft/GenerativeAI.Microsoft.csproj
@@ -16,9 +16,9 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/gunpal5/Google_GenerativeAI</RepositoryUrl>
         <PackageTags>GenerativeAI,Google,Gemini,Tools,SDK,GoogleGemini.Net,Google,Gemini,Gemini.Net</PackageTags>
-        <Version>2.0-beta</Version>
-        <AssemblyVersion>2.0-beta</AssemblyVersion>
-        <FileVersion>2.0-beta</FileVersion>
+        <Version>2.0.0</Version>
+        <AssemblyVersion>2.0.0</AssemblyVersion>
+        <FileVersion>2.0.0</FileVersion>
         <SignAssembly>True</SignAssembly>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     </PropertyGroup>
