--- a/src/GenerativeAI.Auth/GenerativeAI.Auth.csproj
+++ b/src/GenerativeAI.Auth/GenerativeAI.Auth.csproj
@@ -16,12 +16,13 @@
         <PackageReadmeFile>./README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/gunpal5/Google_GenerativeAI</RepositoryUrl>
         <PackageTags>GenerativeAI,Google,Gemini,Tools,SDK,GoogleGemini.Net,Google,Gemini,Gemini.Net</PackageTags>
-        <Version>2.0.0</Version>
-        <AssemblyVersion>2.0.0</AssemblyVersion>
-        <FileVersion>2.0.0</FileVersion>
+        <Version>2.0.2</Version>
+        <AssemblyVersion>2.0.2</AssemblyVersion>
+        <FileVersion>2.0.2</FileVersion>
         <SignAssembly>True</SignAssembly>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <RootNamespace>GenerativeAI.Auth</RootNamespace>
+        <RootNamespace>GenerativeAI.Authenticators</RootNamespace>
+        <AssemblyName>GenerativeAI.Authenticators</AssemblyName>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\GenerativeAI\GenerativeAI.csproj"/>
