--- a/tests/GenerativeAI.Auth.Tests/GenerativeAI.Auth.Tests.csproj
+++ b/tests/GenerativeAI.Auth.Tests/GenerativeAI.Auth.Tests.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <LangVersion>latest</LangVersion>
         <RootNamespace>GenerativeAI.Auth</RootNamespace>
     </PropertyGroup>
 
