--- a/tests/GenerativeAI.Microsoft.Tests/GenerativeAI.Microsoft.Tests.csproj
+++ b/tests/GenerativeAI.Microsoft.Tests/GenerativeAI.Microsoft.Tests.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
+         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
