--- a/tests/GenerativeAI.Microsoft.Tests/GenerativeAI.Microsoft.Tests.csproj
+++ b/tests/GenerativeAI.Microsoft.Tests/GenerativeAI.Microsoft.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -6,15 +6,20 @@
         <ImplicitUsings>enable</ImplicitUsings>
          <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
+		<OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0-preview-25107-01" />
-        <PackageReference Include="MSTest" Version="3.8.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="xunit.v3" Version="1.1.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting"/>
+        
     </ItemGroup>
 
     <ItemGroup>
