--- a/tests/GenerativeAI.TestBase/GenerativeAI.TestBase.csproj
+++ b/tests/GenerativeAI.TestBase/GenerativeAI.TestBase.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net7.0;net8.0;netstandard2.0;net5.0;net9.0;net462</TargetFrameworks>
+        <TargetFrameworks>net6.0;net7.0;net8.0;netstandard2.0;net9.0;net472</TargetFrameworks>
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
          <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
+
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-        <PackageReference Include="xunit.abstractions" Version="2.0.3" />
-        <PackageReference Include="xunit.extensibility.core" Version="2.9.3" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />    
+        <PackageReference Include="xunit.v3.extensibility.core" Version="1.1.0" />
     </ItemGroup>
 
     <ItemGroup>
