--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: [ '9.0.x' ]
+        dotnet-version: [ '9.0.x','6.0.x','8.0.x','7.0.x' ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
