--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -24,5 +24,7 @@ jobs:
         dotnet-version: 9.0.x
     - name: Restore dependencies
       run: dotnet restore    
+    - name: Build
+      run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --configuration Release --verbosity Minimal 
+      run: dotnet test --configuration Release --no-build --verbosity Minimal 
