--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: Build and Publish To Nuget
 on: [ workflow_dispatch ]
-
+permissions:
+  contents: write
+  pull-requests: write
 jobs:  
   build-test-publish:   
     name: Build, test and publish
