--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,11 @@ permissions:
   pull-requests: write
 jobs:  
   build-test-publish:   
-    name: Build, test and publish
+    name: Publishing
     uses: gunpal5/workflows/.github/workflows/dotnet_build-test-publish.yml@main
     secrets:
       nuget-key: ${{ secrets.NUGET_KEY }}
     with:
       generate-build-number: true
-      create-release: true
+      create-release: false
       
