--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ permissions:
 jobs:  
   build-test-publish:   
     name: Publishing
-    uses: gunpal5/workflows/blob/main/.github/workflows/dotnet_build-test-publish@main
+    uses: gunpal5/.github/workflows/dotnet_build-test-publish@main
     secrets:
       nuget-key: ${{ secrets.NUGET_KEY }}
     with:
