--- a/tests/GenerativeAI.TestBase/GenerativeAI.TestBase.csproj
+++ b/tests/GenerativeAI.TestBase/GenerativeAI.TestBase.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0;net472</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net472;net6.0;net7.0</TargetFrameworks>
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
          <LangVersion>latest</LangVersion>
