--- a/src/GenerativeAI/GenerativeAI.csproj
+++ b/src/GenerativeAI/GenerativeAI.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0;net8.0;netstandard2.0;net5.0;net9.0;net462</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;net8.0;netstandard2.0;net9.0;net462</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <LangVersion>latest</LangVersion>
@@ -49,6 +49,11 @@
         <PackageReference Include="System.Text.Json" Version="8.0.5"/>
     </ItemGroup>
     <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0'">
+         <PackageReference Include="JsonSchema.Net.Generation" Version="3.5.1"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1"/>
+        <PackageReference Include="System.Text.Json" Version="8.0.5"/>
+    </ItemGroup>
+     <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
          <PackageReference Include="JsonSchema.Net.Generation" Version="3.5.1"/>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1"/>
         <PackageReference Include="System.Text.Json" Version="8.0.5"/>
