--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -43,5 +43,9 @@
 		<AnalysisLevel>latest</AnalysisLevel>
 		<AnalysisMode>All</AnalysisMode>
 	</PropertyGroup>
+	<PropertyGroup>
+		<!-- If you already have some warnings disabled, just add ";CS8618" -->
+		<NoWarn>$(NoWarn);CS8618;CA1707</NoWarn>
+	</PropertyGroup>
 
 </Project>
