--- a/.github/workflows/create-release-on-tag-push.yml
+++ b/.github/workflows/create-release-on-tag-push.yml
@@ -15,4 +15,4 @@ jobs:
       generate-build-number: true
       create-release: true
       publish: true
-      project-version: ${{ needs.update.outputs.new_version }}
+      project-version: ${{ inputs.version }}
