--- a/samples/SemanticRetrievalDemo/SemanticRetrievalDemo.csproj
+++ b/samples/SemanticRetrievalDemo/SemanticRetrievalDemo.csproj
@@ -9,11 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="DocumentChunker" Version="1.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\..\src\GenerativeAI.Auth\GenerativeAI.Auth.csproj" />
-      <ProjectReference Include="..\..\src\GenerativeAI\GenerativeAI.csproj" />
+      <PackageReference Include="Google_GenerativeAI" Version="2.0.14" />
+      <PackageReference Include="Google_GenerativeAI.Auth" Version="2.0.14" />
     </ItemGroup>
 
 </Project>
