feat: implement MultiModal Live APIs and add Live package
Added support for MultiModal Live APIs using WebSockets, introducing real-time communication for text and audio interactions. Created a new project `Google_GenerativeAI.Live` with essential extensions, helper classes, and an example README for ease of use. Removed outdated tests and shifted to a dedicated testing framework for Live functionalities.

--- a/src/GenerativeAI/GenerativeAI.csproj
+++ b/src/GenerativeAI/GenerativeAI.csproj
@@ -13,7 +13,7 @@
 	  <PackageProjectUrl>https://github.com/gunpal5/Google_GenerativeAI</PackageProjectUrl>
 	  <PackageReadmeFile>README.md</PackageReadmeFile>
 	  <RepositoryUrl>https://github.com/gunpal5/Google_GenerativeAI</RepositoryUrl>
-	  <PackageTags>Gemini,Google,GenerativeAI,GoogleGemini.Net,Google,Gemini,Gemini.Net,GoogleGemini</PackageTags>
+	  <PackageTags>Gemini,Google,GenerativeAI,GoogleGemini.Net,Google,Gemini,Gemini .Net,GoogleGemini,GenerativeAI .Net,Vertex AI</PackageTags>
 	  <Version>2.0.15</Version>
 	  <AssemblyVersion>2.0.15</AssemblyVersion>
 	  <FileVersion>2.0.15</FileVersion>
