--- a/samples/SemanticRetrievalDemo/SemanticRetrievalDemo.csproj
+++ b/samples/SemanticRetrievalDemo/SemanticRetrievalDemo.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Bogus" Version="35.6.1" />
       <PackageReference Include="DocumentChunker" Version="1.0.0" />
       <PackageReference Include="Google_GenerativeAI" Version="2.0.14" />
       <PackageReference Include="Google_GenerativeAI.Auth" Version="2.0.14" />
