feat: Added Vertex Rag Engine with Vertex Retrieval Tool

--- a/tests/GenerativeAI.Tests/GenerativeAI.Tests.csproj
+++ b/tests/GenerativeAI.Tests/GenerativeAI.Tests.csproj
@@ -50,6 +50,9 @@
     <None Update="TestData\testaudio.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\pg1184.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
