--- a/tests/GenerativeAI.Live.Tests/GenerativeAI.Live.Tests.csproj
+++ b/tests/GenerativeAI.Live.Tests/GenerativeAI.Live.Tests.csproj
@@ -6,12 +6,14 @@
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
         <OutputType>Exe</OutputType>
+        <PublishAot>true</PublishAot>
     </PropertyGroup>
 
-    <ItemGroup>
-<!--        <PackageReference Include="coverlet.collector" Version="6.0.2"/>-->
+    <ItemGroup><!--        <PackageReference Include="coverlet.collector" Version="6.0.2"/>-->
 <!--        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>     -->
 <!--        <PackageReference Include="xunit.v3" Version="1.1.0" />-->
+    
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.2" />
     </ItemGroup>
 
     <ItemGroup>
