--- a/src/GenerativeAI.Live/GenerativeAI.Live.csproj
+++ b/src/GenerativeAI.Live/GenerativeAI.Live.csproj
@@ -19,6 +19,7 @@
         <FileVersion>2.3.1</FileVersion>
         <SignAssembly>True</SignAssembly>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <IsAotCompatible>true</IsAotCompatible>
     </PropertyGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0'">
