--- a/src/GenerativeAI/GenerativeAI.csproj
+++ b/src/GenerativeAI/GenerativeAI.csproj
@@ -19,6 +19,7 @@
 	  <FileVersion>2.3.1</FileVersion>
 	  <SignAssembly>True</SignAssembly>
 	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+      <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
 	
   <ItemGroup>
@@ -29,12 +30,10 @@
   </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0'">
-        <PackageReference Include="JsonSchema.Net.Generation" Version="5.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1"/>
         <PackageReference Include="System.Text.Json" Version="9.0.2"/>
     </ItemGroup>
     <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0'">
-        <PackageReference Include="JsonSchema.Net.Generation" Version="5.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1"/>
         <PackageReference Include="System.Text.Json" Version="9.0.2"/>
     </ItemGroup>
