optimized references for .net standard 2.0 and .net 4.6.2

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -36,6 +36,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Remove="JetBrains.Annotations">
+			
+		</PackageReference>
 	</ItemGroup>
 
 	<PropertyGroup Label="Analyzers">
