--- a/src/GenerativeAI.Tools/GenerativeAI.Tools.csproj
+++ b/src/GenerativeAI.Tools/GenerativeAI.Tools.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net7.0;net8.0;netstandard2.0;net9.0;net462</TargetFrameworks>
+        <TargetFrameworks>net8.0;netstandard2.0;net9.0;net462</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
