--- a/tests/GenerativeAI.Microsoft.Tests/GenerativeAI.Microsoft.Tests.csproj
+++ b/tests/GenerativeAI.Microsoft.Tests/GenerativeAI.Microsoft.Tests.csproj
@@ -25,6 +25,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\GenerativeAI.Microsoft\GenerativeAI.Microsoft.csproj" />
+      <ProjectReference Include="..\..\src\GenerativeAI.Tools\GenerativeAI.Tools.csproj" />
       <ProjectReference Include="..\GenerativeAI.TestBase\GenerativeAI.TestBase.csproj" />
       <ProjectReference Include="..\GenerativeAI.Tests\GenerativeAI.Tests.csproj" />
     </ItemGroup>
