--- a/src/GenerativeAI.Microsoft/GenerativeAI.Microsoft.csproj
+++ b/src/GenerativeAI.Microsoft/GenerativeAI.Microsoft.csproj
@@ -8,7 +8,8 @@
         <PackageId>Google_$(AssemblyName)</PackageId>
         <Title>Microsoft.Extensions.AI Integration with Google_GenerativeAI SDK for .NET Applications</Title>
         <Authors>Gunpal Jain</Authors>
-        <Company/>
+        <Company>Argentron Technologies</Company>
+        <PackageIcon>package-icon.jpg</PackageIcon>
         <Description>This library provides Microsoft.Extensions.AI integration with Google_GenerativeAI SDK for .NET applications.</Description>
 
 
@@ -23,6 +24,10 @@
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
      
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\..\package-icon.jpg" Pack="True" PackagePath="" />
+    </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\GenerativeAI\GenerativeAI.csproj" />
     </ItemGroup>
