--- a/src/GenerativeAI.Auth/GenerativeAI.Auth.csproj
+++ b/src/GenerativeAI.Auth/GenerativeAI.Auth.csproj
@@ -8,7 +8,8 @@
         <PackageId>Google_$(AssemblyName)</PackageId>
         <Title>API Authentication for Google Generative AI SDK</Title>
         <Authors>Gunpal Jain</Authors>
-        <Company/>
+        <Company>Argentron Technologies</Company>
+        <PackageIcon>package-icon.jpg</PackageIcon>
         <Description>This library is part of the Google_GenerativeAI SDK and provides various API authentication implementations for seamless usage of the Google_GenerativeAI SDK.</Description>
         <PackageProjectUrl>https://github.com/gunpal5/Google_GenerativeAI</PackageProjectUrl>
         <PackageReadmeFile>./README.md</PackageReadmeFile>
@@ -23,6 +24,9 @@
         <AssemblyName>GenerativeAI.Authenticators</AssemblyName>
        
     </PropertyGroup>
+    <ItemGroup>
+        <None Include="..\..\package-icon.jpg" Pack="True" PackagePath="" />
+    </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\GenerativeAI\GenerativeAI.csproj"/>
     </ItemGroup>
